# ComfyUI-Kandinsky

./: .gitignore  README.md  __init__.py  kandinsky_patcher.py  kandinsky_sampler.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: Kandinsky5_T2V.json
src/kandinsky/: __init__.py  generation_utils.py  magcache_utils.py  t2v_pipeline.py  utils.py
src/kandinsky/models/: dit.py  nn.py  parallelize.py  text_embedders.py  utils.py  vae.py
